--- a/goadpost-app/Base.lproj/Main.storyboard
+++ b/goadpost-app/Base.lproj/Main.storyboard
@@ -317,6 +317,126 @@
             </objects>
             <point key="canvasLocation" x="810" y="36"/>
         </scene>
+        <!--Finish GoalVC-->
+        <scene sceneID="FWp-K0-8jS">
+            <objects>
+                <viewController storyboardIdentifier="finishGoalVC" id="OBy-Ya-7IX" customClass="FinishGoalVC" customModule="goadpost_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2gv-xq-TBi"/>
+                        <viewControllerLayoutGuide type="bottom" id="mXD-MC-fww"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Nkq-d5-bWH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WL7-xq-LW3">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="abR-Z9-Ydg">
+                                        <rect key="frame" x="138" y="37" width="99" height="25"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GOAL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRk-2U-yla">
+                                                <rect key="frame" x="0.0" y="0.0" width="51" height="25"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="POST" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYV-y6-zOf">
+                                                <rect key="frame" x="51" y="0.0" width="48" height="25"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
+                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jc2-EY-jrS">
+                                        <rect key="frame" x="23" y="37" width="14" height="25"/>
+                                        <state key="normal" image="back"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.42745098040000001" green="0.73725490199999999" blue="0.38823529410000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="3UP-F5-ZTm"/>
+                                    <constraint firstItem="jc2-EY-jrS" firstAttribute="leading" secondItem="WL7-xq-LW3" secondAttribute="leadingMargin" constant="15" id="3tk-Zc-L4L"/>
+                                    <constraint firstItem="abR-Z9-Ydg" firstAttribute="centerX" secondItem="WL7-xq-LW3" secondAttribute="centerX" id="QAS-c0-Nnh"/>
+                                    <constraint firstAttribute="bottom" secondItem="abR-Z9-Ydg" secondAttribute="bottom" constant="8" id="eXB-O2-h7W"/>
+                                    <constraint firstItem="jc2-EY-jrS" firstAttribute="centerY" secondItem="abR-Z9-Ydg" secondAttribute="centerY" id="pgY-i5-GRb"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fE5-Bs-79A">
+                                <rect key="frame" x="36" y="90" width="303" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How many points till complate?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ufi-l3-8qo">
+                                        <rect key="frame" x="23.5" y="0.0" width="256.5" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="F7K-ke-AvJ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Zq-yZ-HNe">
+                                        <rect key="frame" x="131.5" y="35" width="40" height="65"/>
+                                        <color key="textColor" red="0.42745098040000001" green="0.73725490199999999" blue="0.38823529410000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="55"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="RBq-aw-72f"/>
+                                </constraints>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="swk-wh-oVV">
+                                <rect key="frame" x="0.0" y="198" width="375" height="469"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k4f-lU-wIV">
+                                        <rect key="frame" x="0.0" y="419" width="375" height="50"/>
+                                        <color key="backgroundColor" red="0.96470588239999999" green="0.65098039220000004" blue="0.13725490200000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="WvM-ey-Vyg"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
+                                        <state key="normal" title="CREATE GOAL">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="createBtnWasPressed:" destination="OBy-Ya-7IX" eventType="touchUpInside" id="vhj-Vk-m9O"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="k4f-lU-wIV" secondAttribute="trailing" id="EzZ-3Z-yoW"/>
+                                    <constraint firstItem="k4f-lU-wIV" firstAttribute="leading" secondItem="swk-wh-oVV" secondAttribute="leading" id="Os8-Rm-nEg"/>
+                                    <constraint firstItem="k4f-lU-wIV" firstAttribute="leading" secondItem="swk-wh-oVV" secondAttribute="leading" constant="-8" id="t88-3Q-fo1"/>
+                                    <constraint firstAttribute="trailing" secondItem="k4f-lU-wIV" secondAttribute="trailing" constant="8" id="wMz-7m-2hb"/>
+                                    <constraint firstAttribute="bottom" secondItem="k4f-lU-wIV" secondAttribute="bottom" id="x5J-Jh-A8Z"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="swk-wh-oVV" secondAttribute="trailing" id="37c-7Y-k1h"/>
+                            <constraint firstItem="WL7-xq-LW3" firstAttribute="leading" secondItem="Nkq-d5-bWH" secondAttribute="leading" id="LkP-48-D8b"/>
+                            <constraint firstItem="fE5-Bs-79A" firstAttribute="leading" secondItem="Nkq-d5-bWH" secondAttribute="leadingMargin" constant="20" id="Md0-en-DlX"/>
+                            <constraint firstItem="WL7-xq-LW3" firstAttribute="top" secondItem="Nkq-d5-bWH" secondAttribute="top" id="Nut-GS-jm8"/>
+                            <constraint firstItem="swk-wh-oVV" firstAttribute="top" secondItem="fE5-Bs-79A" secondAttribute="bottom" constant="8" id="TUh-Oq-ms0"/>
+                            <constraint firstAttribute="trailing" secondItem="WL7-xq-LW3" secondAttribute="trailing" id="TjV-9M-ZfP"/>
+                            <constraint firstItem="fE5-Bs-79A" firstAttribute="top" secondItem="WL7-xq-LW3" secondAttribute="bottom" constant="20" id="dY6-Jo-UNw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fE5-Bs-79A" secondAttribute="trailing" constant="20" id="dhI-z7-UVJ"/>
+                            <constraint firstItem="swk-wh-oVV" firstAttribute="leading" secondItem="Nkq-d5-bWH" secondAttribute="leading" id="jOg-GK-ccT"/>
+                            <constraint firstItem="mXD-MC-fww" firstAttribute="top" secondItem="swk-wh-oVV" secondAttribute="bottom" id="jgH-Qx-Od5"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="createBtn" destination="k4f-lU-wIV" id="9Gf-Hn-qhG"/>
+                        <outlet property="pointsTextField" destination="9Zq-yZ-HNe" id="VTQ-ib-RlW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qed-q2-75u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1525.5999999999999" y="35.532233883058474"/>
+        </scene>
     </scenes>
     <resources>
         <image name="addGoal" width="35" height="32"/>
