--- a/goadpost-app/Base.lproj/Main.storyboard
+++ b/goadpost-app/Base.lproj/Main.storyboard
@@ -352,6 +352,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jc2-EY-jrS">
                                         <rect key="frame" x="23" y="37" width="14" height="25"/>
                                         <state key="normal" image="back"/>
+                                        <connections>
+                                            <action selector="backBtnWasPressed:" destination="OBy-Ya-7IX" eventType="touchUpInside" id="M24-OZ-5tH"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.42745098040000001" green="0.73725490199999999" blue="0.38823529410000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
